Fixed article text spacing.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -570,7 +570,7 @@
 		-webkit-transition: color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out;
-		color: #98c593;
+		color: rgb(255,255,255);
 	}
 
 	sub {
@@ -596,8 +596,9 @@
 		font-style: italic;
 	}
 
-	p, ul, ol, dl, table {
-		margin-bottom: 1em;
+	p, b, ul, ol, dl, table {
+		/* margin-bottom: 1em; */
+		/* text-align: center; */
 	}
 
 /* Box */
@@ -927,13 +928,13 @@
 		}
 
 		.image:before {
-			content: '';
+			/* content: ''; */
 			position: absolute;
 			left: 0;
 			top: 0;
 			width: 100%;
 			height: 100%;
-			background: url("images/overlay.png");
+			/* background: url("images/overlay.png"); */
 		}
 
 		.image img {
